Fix form showing behind footer for responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@ html {
     overflow-x: hidden;
 }
 
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+
 .image-shadow {
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.9);
 }
@@ -176,6 +182,10 @@ h2 {
     position: relative;    
 }
 
+.contact-container {
+    padding-bottom: 20px;
+}
+
 .form-label, .radio-text {
     color: #edebe3;
     font-size: 1.2rem;
@@ -198,7 +208,8 @@ h2 {
 
 .form-card {
     border: 1px solid #efef0d;
-    background-color: rgba(0, 0, 0, 0.4)
+    background-color: rgba(0, 0, 0, 0.4);
+    margin-bottom: ;
 }
  
 
@@ -206,14 +217,14 @@ h2 {
 
 footer {
     background: #B5BAC6;
-    height: auto;
-    width: 100vw;
+    width: 100%;
     position: relative;
     color: #48383F;
     padding-top: 30px;
     border-top: 15px solid #000;
     border-bottom: 15px solid #000;
     margin: 0;
+    bottom:0
 }
 
 .footer-content {
